Design changes pt .1

--- a/resources/scripts/components/elements/button/style.module.css
+++ b/resources/scripts/components/elements/button/style.module.css
@@ -1,10 +1,10 @@
 .button {
     @apply px-4 py-2 inline-flex items-center justify-center;
-    @apply rounded text-base font-semibold transition-all duration-100;
+    @apply rounded-md text-base text-primary-50 transition-all duration-100;
 
     /* Sizing Controls */
     &.small {
-        @apply px-4 py-0 h-8 font-normal text-sm focus:ring-2;
+        @apply px-4 py-0 h-8 font-normal text-sm ;
     }
 
     &.large {
@@ -34,7 +34,7 @@
 
 .primary {
     @apply bg-blue-600 text-blue-50;
-    @apply hover:bg-blue-500 active:bg-blue-500 focus:ring-blue-400 focus:ring-opacity-75;
+    @apply hover:bg-blue-500 active:bg-blue-500 ;
 
     &.secondary {
         @apply hover:bg-blue-600 active:bg-blue-600;
@@ -47,7 +47,7 @@
 
 .text {
     @apply bg-gray-500 text-gray-50;
-    @apply hover:bg-gray-400 active:bg-gray-400 focus:ring-gray-300 focus:ring-opacity-50;
+    @apply hover:bg-gray-400 active:bg-gray-400;
 
     &.secondary {
         @apply hover:bg-gray-500 active:bg-gray-500;
@@ -60,7 +60,7 @@
 
 .danger {
     @apply bg-red-600 text-gray-50;
-    @apply hover:bg-red-500 active:bg-red-500 focus:ring-red-400 focus:ring-opacity-75;
+    @apply hover:bg-red-500 active:bg-red-500 ;
 
     &.secondary {
         @apply hover:bg-red-600 active:bg-red-600;
