--- a/resources/scripts/components/elements/dialog/style.module.css
+++ b/resources/scripts/components/elements/dialog/style.module.css
@@ -3,8 +3,7 @@
 }
 
 .panel {
-    @apply relative bg-gray-600 rounded max-w-xl w-full mx-auto shadow-lg text-left;
-    @apply ring-4 ring-gray-800 ring-opacity-80;
+    @apply relative bg-gray-700 rounded max-w-xl w-full mx-auto shadow-lg text-left;
 }
 
 .title {
@@ -12,7 +11,7 @@
 }
 
 .close_icon {
-    @apply w-5 h-5 group-hover:rotate-90 transition-transform duration-100;
+    @apply w-5 h-5 group-hover:rotate-90 transition-transform duration-100 cursor-pointer;
 }
 
 .dialog_icon {
