--- a/resources/scripts/components/elements/button/style.module.css
+++ b/resources/scripts/components/elements/button/style.module.css
@@ -1,10 +1,10 @@
 .button {
-    @apply px-4 py-2 inline-flex items-center justify-center;
-    @apply rounded text-base text-primary-50 transition-all duration-100;
+    @apply px-4 py-2 inline-flex items-center justify-center overflow-hidden;
+    @apply rounded font-medium text-sm text-primary-50 transition-all duration-100;
 
     /* Sizing Controls */
     &.small {
-        @apply px-4 py-0 h-8 font-normal text-sm ;
+        @apply px-4 py-0 h-8 font-normal text-sm;
     }
 
     &.large {
@@ -33,8 +33,8 @@
 }
 
 .primary {
-    @apply bg-blue-600 text-blue-50;
-    @apply hover:bg-blue-500 active:bg-blue-500 ;
+    @apply bg-blue-500 text-blue-50;
+    @apply hover:bg-blue-500 active:bg-blue-500;
 
     &.secondary {
         @apply hover:bg-blue-600 active:bg-blue-600;
@@ -46,7 +46,7 @@
 }
 
 .text {
-    @apply bg-gray-600 text-gray-50;
+    @apply bg-gray-500 text-gray-50;
     @apply hover:bg-gray-500 active:bg-gray-500;
 
     &.secondary {
@@ -59,8 +59,8 @@
 }
 
 .danger {
-    @apply bg-red-600 text-gray-50;
-    @apply hover:bg-red-500 active:bg-red-500 ;
+    @apply bg-red-500 text-gray-50;
+    @apply hover:bg-red-500 active:bg-red-500;
 
     &.secondary {
         @apply hover:bg-red-600 active:bg-red-600;
