--- a/resources/scripts/components/elements/inputs/styles.module.css
+++ b/resources/scripts/components/elements/inputs/styles.module.css
@@ -14,7 +14,7 @@
 
 .text_input {
     @apply transition-shadow duration-75;
-    @apply w-full bg-neutral-700 shadow-sm focus:border-primary-500 focus:ring-offset-neutral-800 focus:ring-primary-500 text-neutral-200 focus:ring-offset-2 focus:ring-2 rounded px-4 py-2 outline-none border-0;
+    @apply w-full bg-neutral-700 shadow-sm focus:border-primary-500 focus:ring-offset-neutral-800 focus:ring-primary-500 text-neutral-200 focus:ring-offset-2 focus:ring-2 rounded-md px-4 py-2 outline-none border-0;
 
     &:focus,
     &:active {
