--- a/resources/scripts/components/server/console/style.module.css
+++ b/resources/scripts/components/server/console/style.module.css
@@ -1,5 +1,5 @@
 .stat_block {
-    @apply flex items-center rounded shadow-lg relative;
+    @apply flex items-center rounded-md shadow-lg relative;
     @apply col-span-3 md:col-span-2 lg:col-span-6;
     @apply px-3 py-2 md:p-3 lg:p-4;
 
@@ -31,7 +31,7 @@
     }
 
     & > .container {
-        @apply rounded-t p-1 sm:p-2 bg-black min-h-[16rem] flex-1 font-mono text-sm;
+        @apply rounded-t-md p-1 sm:p-2 bg-black min-h-[16rem] flex-1 font-mono text-sm;
 
         & #terminal {
             @apply h-full;
@@ -51,7 +51,7 @@
     }
 
     & .command_input {
-        @apply relative bg-gray-900 px-2 text-gray-100 pl-10 pr-4 py-2 w-full font-mono text-sm sm:rounded-b;
+        @apply relative bg-gray-900 px-2 text-gray-100 pl-10 pr-4 py-2 w-full font-mono text-sm sm:rounded-b-md;
         @apply focus:ring-0 outline-none focus-visible:outline-none;
         @apply border-0 border-b-2 border-transparent transition-colors duration-100;
         @apply active:border-primary-500 focus:border-primary-500;
@@ -59,5 +59,5 @@
 }
 
 .chart_container {
-    @apply bg-gray-800 rounded shadow-lg pt-2 border-b-4 border-gray-800 relative;
+    @apply bg-neutral-800 rounded-md shadow-lg pt-2 border-b-4 border-gray-800 relative;
 }
