--- a/resources/scripts/components/server/files/style.module.css
+++ b/resources/scripts/components/server/files/style.module.css
@@ -2,7 +2,7 @@
     @apply grid grid-cols-2 sm:grid-cols-3 w-full gap-4 mb-4;
 
     & button {
-        @apply w-full first:col-span-2 sm:first:col-span-1;
+        @apply w-full first:col-span-2 last:col-span-2 sm:first:col-span-1;
     }
 
     @screen md {
@@ -15,7 +15,7 @@
 }
 
 .file_row {
-    @apply flex items-center cursor-pointer bg-neutral-800 rounded-sm mb-px text-sm no-underline duration-75 transition;
+    @apply flex items-center cursor-pointer bg-neutral-800 rounded-md mb-px text-sm no-underline duration-75 transition;
     @apply hover:text-neutral-100 hover:bg-neutral-700/25;
 
     & > .details {
